/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.6.1/userguide/java_library_plugin.html
 */

/*
	프로젝트 우클릭 > Properties > Gradle
		Override workspace settings 체크
			Specific Gradle version : 6.6.1
			Java home
*/

plugins {
    // Apply the java-library plugin to add support for Java Library
    id 'java-library'
}

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
}

group = 'kdk'
version = '0.2'

ext {
	javaVersion = '1.8'
	encoding = 'UTF-8'
	web = [
		servletVersion: '3.1.0'
	]
	httpclientVersion = '4.5.5'
	log = [
		slf4jVersion: '1.7.5',
		logbackVersion: '1.2.3'
	]
	junitVersion = '4.12'
}

sourceCompatibility = '1.8'
targetCompatibility = '1.8'
compileJava.options.encoding = 'UTF-8'

dependencies {
	/* Other Web dependencies */
	compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: web.servletVersion

	/* Logging with SLF4J & LogBack */
	implementation group: 'org.slf4j', name: 'slf4j-api', version: log.slf4jVersion

	runtimeOnly("ch.qos.logback:logback-classic:${log.logbackVersion}") {
		 exclude module: 'slf4j-api'
	}

/* Apache */
	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'

	// https://mvnrepository.com/artifact/org.apache.commons/commons-text
	implementation("org.apache.commons:commons-text:1.2") {
		 exclude module: 'commons-lang3'
	}

	// https://mvnrepository.com/artifact/commons-codec/commons-codec
	implementation group: 'commons-codec', name: 'commons-codec', version: '1.11'

	// https://mvnrepository.com/artifact/commons-io/commons-io
	implementation group: 'commons-io', name: 'commons-io', version: '2.6'

	// https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
	implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'

	// https://mvnrepository.com/artifact/org.apache.commons/commons-configuration2
	implementation("org.apache.commons:commons-configuration2:2.2") {
		 exclude module: 'commons-lang3'
	}

	// https://mvnrepository.com/artifact/commons-net/commons-net
	implementation group: 'commons-net', name: 'commons-net', version: '3.6'

	// https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils
	implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'

	// https://mvnrepository.com/artifact/org.apache.commons/commons-email
	implementation group: 'org.apache.commons', name: 'commons-email', version: '1.5'

	// https://mvnrepository.com/artifact/org.apache.commons/commons-compress
	implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.16.1'

/* Apache Etc */
	// https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
	implementation("org.apache.httpcomponents:httpclient:${httpclientVersion}") {
		 exclude module: 'commons-codec'
		 exclude module: 'commons-logging'
	}

	// https://mvnrepository.com/artifact/org.apache.httpcomponents/httpmime
	implementation("org.apache.httpcomponents:httpmime:${httpclientVersion}") {
		 exclude module: 'httpclient'
	}

	// https://mvnrepository.com/artifact/org.apache.tika/tika-core
	implementation group: 'org.apache.tika', name: 'tika-core', version: '1.17'

	// https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '3.16'

/* Google */
	// https://mvnrepository.com/artifact/com.google.code.gson/gson
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'

	// https://mvnrepository.com/artifact/com.google.guava/guava
	implementation group: 'com.google.guava', name: 'guava', version: '20.0'

/* Etc */
    // https://mvnrepository.com/artifact/cglib/cglib-nodep
	implementation group: 'cglib', name: 'cglib-nodep', version: '3.2.6'

	// https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml
	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.9.4'

	// https://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream
	implementation group: 'com.thoughtworks.xstream', name: 'xstream', version: '1.4.10'

	// https://mvnrepository.com/artifact/joda-time/joda-time
	implementation group: 'joda-time', name: 'joda-time', version: '2.9.9'

	// https://mvnrepository.com/artifact/com.ibm.icu/icu4j
	implementation group: 'com.ibm.icu', name: 'icu4j', version: '60.2'

	// https://mvnrepository.com/artifact/com.jcraft/jsch
	implementation group: 'com.jcraft', name: 'jsch', version: '0.1.54'

	// https://mvnrepository.com/artifact/com.github.fernandospr/javapns-jdk16
    implementation("com.github.fernandospr:javapns-jdk16:2.4.0") {
        exclude module: 'log4j'
    }

	// https://mvnrepository.com/artifact/net.sf.jxls/jxls-core
	implementation group: 'net.sf.jxls', name: 'jxls-core', version: '1.0.6'

/* Test */
	testImplementation group: 'junit', name: 'junit', version: junitVersion
}